documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long * LPMSGADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

P13W32API BOOL __stdcall P13_MsgIsAccessed(MSGADDR msgaddr,HCARD handleval);

P13W32API USHORT __stdcall P13_MsgOptRd(MSGADDR msgaddr,HCARD handleval);

P13W32API VOID __stdcall P13_MsgOptWr(USHORT msgopt,MSGADDR msgaddr,HCARD handleval);

P13W32API MSGADDR __stdcall P13_MsgReset(MSGADDR msgaddr,HCARD handleval);

P13W32API USHORT __stdcall P13_MsgSWD1Rd(MSGADDR msgaddr,HCARD handleval);

P13W32API USHORT __stdcall P13_MsgSWD2Rd(MSGADDR msgaddr,HCARD handleval);

P13W32API ULONG __stdcall P13_Mul(ULONG mula,ULONG mulb);

P13W32API USHORT __stdcall P13_PortRd(USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_PortWr(USHORT value,USHORT addrval,HCARD handleval);

P13W32API USHORT __stdcall P13_ProgRdW(USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_ProgWrW(USHORT value,USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMFill(USHORT value,ULONG addrval,ULONG countval,HCARD handleval);

P13W32API USHORT __stdcall P13_RAMRdB(ULONG addrval,HCARD handleval);

P13W32API ULONG __stdcall P13_RAMRdL(ULONG addrval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMRdsW(LPUSHORT valueptr,ULONG addrval,USHORT countval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMRdsxW(LPUSHORT valueptr,ULONG addrval,USHORT countval,HCARD handleval);

P13W32API USHORT __stdcall P13_RAMRdW(ULONG addrval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMWipe(HCARD handleval);

P13W32API VOID __stdcall P13_RAMWipeEx(USHORT value,HCARD handleval);

P13W32API VOID __stdcall P13_RAMWrB(USHORT value,ULONG addrval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMWrsW(LPUSHORT valueptr,ULONG addrval,USHORT countval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMWrsxW(LPUSHORT valueptr,ULONG addrval,USHORT countval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_RTConfigEx(ULONG configval,INT taval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_RTConfigExx(ULONG configval,INT taval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_RTReset(INT taval,HCARD handleval);

P13W32API USHORT __stdcall P13_RTStatus(INT taval,HCARD handleval);

P13W32API USHORT __stdcall P13_RTSWDRd(INT taval,HCARD handleval);

P13W32API USHORT __stdcall P13_SARRdW(USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_SARWrW(USHORT value,USHORT addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedBuild(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedBuildEx(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,LPUSHORT period,LPVOID buf,USHORT bufsize,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedBuildExx(ULONG frametime,USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT period,LPVOID buf,USHORT bufsize,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedCalc(LPMSGADDR msgaddr,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedInsEnd(HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedInsMsg(USHORT index,LPMSGADDR msgaddr,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedInsStart(ULONG frametime,USHORT count,HCARD handleval);

P13W32API USHORT __stdcall P13_SchedMaxval(LPUSHORT array,USHORT arraycount);

P13W32API USHORT __stdcall P13_SchedMinval(LPUSHORT array,USHORT arraycount);

P13W32API ERRVAL __stdcall P13_SerialClear(HCARD handleval);

P13W32API ERRVAL __stdcall P13_SerialConfig(ULONG configval,USHORT count,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SerialConfigEx(ULONG configval,USHORT count,HCARD handleval);

P13W32API INT __stdcall P13_SerialStatus(HCARD handleval);

P13W32API ULONG __stdcall P13_SerialWr(LPUSHORT buf,HCARD handleval);

P13W32API ULONG __stdcall P13_Shl(ULONG dataval,USHORT cntval);

P13W32API ULONG __stdcall P13_Shr(ULONG dataval,USHORT cntval);

P13W32API VOID __stdcall P13_TimerClear(HCARD handleval);

P13W32API ULONG __stdcall P13_TimerRd(HCARD handleval);

P13W32API INT __stdcall P13_TimerResolution(INT timerresol,HCARD handleval);

P13W32API USHORT __stdcall P13_TimerResolutionEx(USHORT timershift,HCARD handleval);

P13W32API INT __stdcall P13_ValAsciiCmpi(LPSTR str1,LPSTR str2);

P13W32API LPSTR __stdcall P13_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

P13W32API VOID __stdcall P13_ValAsciiTrimLead(LPSTR buf);

P13W32API VOID __stdcall P13_ValAsciiTrimTrail(LPSTR buf);

P13W32API ULONG __stdcall P13_ValFromAscii(LPCSTR asciistr,INT radixval);

P13W32API USHORT __stdcall P13_ValGetBits(USHORT oldvalue,INT startbit,INT endbit);

P13W32API LPSTR __stdcall P13_ValIncAscii(LPSTR asciistr);

P13W32API LPSTR __stdcall P13_ValInccAscii(LPSTR asciistr);

P13W32API BOOL __stdcall P13_ValIsLower(INT value);

P13W32API INT __stdcall P13_ValLenAscii(INT numbits,INT radixval);

P13W32API USHORT __stdcall P13_ValPackRTCWD(INT MCflag,INT TAval,INT TRflag,INT SAval,INT count);

P13W32API USHORT __stdcall P13_ValPutBits(USHORT oldvalue,USHORT newfld,INT startbit,INT endbit);

P13W32API LPSTR __stdcall P13_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

P13W32API INT __stdcall P13_ValToUpper(INT value);

P13W32API VOID __stdcall P13_ValUnpackRTCWD(USHORT cwd,LPINT BCASTflag,LPINT MCflag,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT count);