documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32NET.VB

    Public Declare Function P13_MsgIsAccessed Lib "P13W32.DLL" Alias "_P13_MsgIsAccessed@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MsgOptRd Lib "P13W32.DLL" Alias "_P13_MsgOptRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_MsgOptWr Lib "P13W32.DLL" Alias "_P13_MsgOptWr@12" (ByVal msgopt As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function P13_MsgReset Lib "P13W32.DLL" Alias "_P13_MsgReset@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_MsgSWD1Rd Lib "P13W32.DLL" Alias "_P13_MsgSWD1Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_MsgSWD2Rd Lib "P13W32.DLL" Alias "_P13_MsgSWD2Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_Mul Lib "P13W32.DLL" Alias "_P13_Mul@8" (ByVal mula As UInt32, ByVal mulb As UInt32) As UInt32
    Public Declare Function P13_PortRd Lib "P13W32.DLL" Alias "_P13_PortRd@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_PortWr Lib "P13W32.DLL" Alias "_P13_PortWr@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function P13_ProgRdW Lib "P13W32.DLL" Alias "_P13_ProgRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_ProgWrW Lib "P13W32.DLL" Alias "_P13_ProgWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub P13_RAMFill Lib "P13W32.DLL" Alias "_P13_RAMFill@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal handleval As UInt32)
    Public Declare Function P13_RAMRdB Lib "P13W32.DLL" Alias "_P13_RAMRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_RAMRdL Lib "P13W32.DLL" Alias "_P13_RAMRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub P13_RAMRdsW Lib "P13W32.DLL" Alias "_P13_RAMRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub P13_RAMRdsxW Lib "P13W32.DLL" Alias "_P13_RAMRdsxW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function P13_RAMRdW Lib "P13W32.DLL" Alias "_P13_RAMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_RAMWipe Lib "P13W32.DLL" Alias "_P13_RAMWipe@4" (ByVal handleval As UInt32)
    Public Declare Sub P13_RAMWipeEx Lib "P13W32.DLL" Alias "_P13_RAMWipeEx@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub P13_RAMWrB Lib "P13W32.DLL" Alias "_P13_RAMWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub P13_RAMWrL Lib "P13W32.DLL" Alias "_P13_RAMWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub P13_RAMWrsW Lib "P13W32.DLL" Alias "_P13_RAMWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub P13_RAMWrsxW Lib "P13W32.DLL" Alias "_P13_RAMWrsxW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub P13_RAMWrW Lib "P13W32.DLL" Alias "_P13_RAMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function P13_RTConfigEx Lib "P13W32.DLL" Alias "_P13_RTConfigEx@12" (ByVal configval As UInt32, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_RTConfigExx Lib "P13W32.DLL" Alias "_P13_RTConfigExx@12" (ByVal configval As UInt32, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_RTReset Lib "P13W32.DLL" Alias "_P13_RTReset@8" (ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_RTStatus Lib "P13W32.DLL" Alias "_P13_RTStatus@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_RTSWDRd Lib "P13W32.DLL" Alias "_P13_RTSWDRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_SARRdW Lib "P13W32.DLL" Alias "_P13_SARRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_SARWrW Lib "P13W32.DLL" Alias "_P13_SARWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function P13_SchedBuild Lib "P13W32.DLL" Alias "_P13_SchedBuild@16" (ByVal nummsgs As UInt16, ByRef msgaddr As UInt32, ByRef freq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_SchedBuildEx Lib "P13W32.DLL" Alias "_P13_SchedBuildEx@28" (ByVal nummsgs As UInt16, ByRef msgaddr As UInt32, ByRef freq As UInt16, ByRef period As UInt16, ByVal buf As IntPtr, ByVal bufsize As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_SchedBuildExx Lib "P13W32.DLL" Alias "_P13_SchedBuildExx@28" (ByVal frametime As UInt32, ByVal nummsgs As UInt16, ByRef msgaddr As UInt32, ByRef period As UInt16, ByVal buf As IntPtr, ByVal bufsize As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_SchedCalc Lib "P13W32.DLL" Alias "_P13_SchedCalc@8" (ByRef msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_SchedInsEnd Lib "P13W32.DLL" Alias "_P13_SchedInsEnd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_SchedInsMsg Lib "P13W32.DLL" Alias "_P13_SchedInsMsg@12" (ByVal index As UInt16, ByRef msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_SchedInsStart Lib "P13W32.DLL" Alias "_P13_SchedInsStart@12" (ByVal frametime As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_SchedMaxval Lib "P13W32.DLL" Alias "_P13_SchedMaxval@8" (ByRef arrayval As UInt16, ByVal arrayvalcount As UInt16) As UInt16
    Public Declare Function P13_SchedMinval Lib "P13W32.DLL" Alias "_P13_SchedMinval@8" (ByRef arrayval As UInt16, ByVal arrayvalcount As UInt16) As UInt16
    Public Declare Function P13_SerialClear Lib "P13W32.DLL" Alias "_P13_SerialClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_SerialConfig Lib "P13W32.DLL" Alias "_P13_SerialConfig@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_SerialConfigEx Lib "P13W32.DLL" Alias "_P13_SerialConfigEx@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_SerialStatus Lib "P13W32.DLL" Alias "_P13_SerialStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_SerialWr Lib "P13W32.DLL" Alias "_P13_SerialWr@8" (ByRef buf As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_Shl Lib "P13W32.DLL" Alias "_P13_Shl@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function P13_Shr Lib "P13W32.DLL" Alias "_P13_Shr@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Sub P13_TimerClear Lib "P13W32.DLL" Alias "_P13_TimerClear@4" (ByVal handleval As UInt32)
    Public Declare Function P13_TimerRd Lib "P13W32.DLL" Alias "_P13_TimerRd@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_TimerResolution Lib "P13W32.DLL" Alias "_P13_TimerResolution@8" (ByVal timerresol As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_TimerResolutionEx Lib "P13W32.DLL" Alias "_P13_TimerResolutionEx@8" (ByVal timershift As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function P13_ValAsciiCmpi Lib "P13W32.DLL" Alias "_P13_ValAsciiCmpi@8" (ByRef str1 As String, ByRef str2 As String) As Int32
    Public Declare Function P13_ValAsciiCpy Lib "P13W32.DLL" Alias "_P13_ValAsciiCpy@12" (ByRef strdest As String, ByRef strsrc As String, ByVal count As Int32) As UInt32
    Public Declare Sub P13_ValAsciiTrimLead Lib "P13W32.DLL" Alias "_P13_ValAsciiTrimLead@4" (ByRef buf As String)
    Public Declare Sub P13_ValAsciiTrimTrail Lib "P13W32.DLL" Alias "_P13_ValAsciiTrimTrail@4" (ByRef buf As String)
    Public Declare Function P13_ValFromAscii Lib "P13W32.DLL" Alias "_P13_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Int32) As UInt32
    Public Declare Function P13_ValGetBits Lib "P13W32.DLL" Alias "_P13_ValGetBits@12" (ByVal oldvalue As UInt16, ByVal startbit As Int32, ByVal endbit As Int32) As UInt16
    Public Declare Function P13_ValIncAscii Lib "P13W32.DLL" Alias "_P13_ValIncAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function P13_ValInccAscii Lib "P13W32.DLL" Alias "_P13_ValInccAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function P13_ValIsLower Lib "P13W32.DLL" Alias "_P13_ValIsLower@4" (ByVal value As Int32) As Int32
    Public Declare Function P13_ValLenAscii Lib "P13W32.DLL" Alias "_P13_ValLenAscii@8" (ByVal numbits As Int32, ByVal radixval As Int32) As Int32
    Public Declare Function P13_ValPackRTCWD Lib "P13W32.DLL" Alias "_P13_ValPackRTCWD@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal count As Int32) As UInt16
    Public Declare Function P13_ValPutBits Lib "P13W32.DLL" Alias "_P13_ValPutBits@16" (ByVal oldvalue As UInt16, ByVal newfld As UInt16, ByVal startbit As Int32, ByVal endbit As Int32) As UInt16
    Public Declare Function P13_ValToAscii Lib "P13W32.DLL" Alias "_P13_ValToAscii@16" (ByVal value As UInt32, ByRef asciistr As String, ByVal numbits As Int32, ByVal radixval As Int32) As UInt32
    Public Declare Function P13_ValToUpper Lib "P13W32.DLL" Alias "_P13_ValToUpper@4" (ByVal value As Int32) As Int32
    Public Declare Sub P13_ValUnpackRTCWD Lib "P13W32.DLL" Alias "_P13_ValUnpackRTCWD@28" (ByVal cwd As UInt16, ByRef bcastflag As Int32, ByRef mcflag As Int32, ByRef taval As Int32, ByRef trflag As Int32, ByRef saval As Int32, ByRef count As Int32)

    '/**
    '*
    '*  Bus controller configuration options
    '*
    '**/
